# gfx-rs-deadlock-example

./: Cargo.toml
src/: .main.rs.swp  main.rs
